--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,6 @@
 MakeItSimpleSol/.vs/
+MakeItSimpleSol/MakeItSimple.QualityCheck/bin/
+MakeItSimpleSol/MakeItSimple.QualityCheck/obj/Release/net8.0/MakeItSimple.QualityCheck.AssemblyInfo.cs
+MakeItSimpleSol/MakeItSimple.QualityCheck/obj/
+MakeItSimpleSol/MakeItSimple/bin/
+MakeItSimpleSol/MakeItSimple/obj/
